--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+   "scripts": {
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "body-parse": "^0.1.0",
     "express": "^5.1.0",
