funcionamento do banco de dados

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-   "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
