--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "dotenv": "^16.6.1",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^7.0.4",
         "nodemon": "^3.1.10",
         "sqlite": "^5.1.1",
         "sqlite3": "^5.1.7"
